Solved Sign In bug and OAuth bugs are solved