@@ -26,16 +26,13 @@ public class SecurityConfig {
     @Autowired
     private UserDetailsService userDetailsService;
 
-//    private final CustomOAuth2UserService oAuth2UserService;
-//
-//    public SecurityConfig(CustomOAuth2UserService oAuth2UserService) {
-//        this.oAuth2UserService = oAuth2UserService;
-//    }
-
     private final UnifiedOAuth2UserService unifiedOAuth2UserService;
 
-    public SecurityConfig(UnifiedOAuth2UserService unifiedOAuth2UserService) {
+    private final CustomAuthenticationEntryPoint customAuthenticationEntryPoint;
+
+    public SecurityConfig(UnifiedOAuth2UserService unifiedOAuth2UserService, CustomAuthenticationEntryPoint customAuthenticationEntryPoint) {
         this.unifiedOAuth2UserService = unifiedOAuth2UserService;
+        this.customAuthenticationEntryPoint = customAuthenticationEntryPoint;
     }
 
     @Bean
@@ -44,24 +41,22 @@ public class SecurityConfig {
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(csrf -> csrf.disable())
                 .authorizeHttpRequests(authorize -> authorize
-                        // OAuth2 end-points themselves are public
                         .requestMatchers("/login/**", "/oauth2/**").permitAll()
-                        // Public endpoints
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                        .requestMatchers(HttpMethod.POST, "/api/users").permitAll() // Allow registration
-                        .requestMatchers(HttpMethod.GET, "/api/blogs").permitAll() // Allow seeing list of blogs
-                        .requestMatchers(HttpMethod.POST, "/api/users/verify").permitAll() // Allow OTP verification
-                        .requestMatchers(HttpMethod.POST, "/api/users/resend-otp").permitAll() // Allow OTP resend
-                        // Authenticated endpoints
-                        .requestMatchers(HttpMethod.GET, "/api/blogs/{blogId}").authenticated() // Blog details
-                        .requestMatchers(HttpMethod.POST, "/api/blogs").authenticated() // Create blog
-                        .requestMatchers(HttpMethod.PUT, "/api/blogs").authenticated() // Update blog
-                        .requestMatchers(HttpMethod.DELETE, "/api/blogs/{blogId}").authenticated() // Delete blog
-                        .requestMatchers(HttpMethod.POST, "/api/blogs/{blogId}/comments").authenticated() // Add comment
-                        .requestMatchers(HttpMethod.POST, "/api/blogs/{blogId}/comments/{parentCommentId}/replies").authenticated() // Add reply
-                        .requestMatchers(HttpMethod.GET, "/api/users/**").authenticated() // User info and profile links
-                        .requestMatchers(HttpMethod.PUT, "/api/users/**").authenticated() // Update user profile
-                        .requestMatchers(HttpMethod.PATCH, "/api/users/**").authenticated() // Update profile picture
+                        .requestMatchers(HttpMethod.POST, "/api/users").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/blogs").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/api/users/verify").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/api/users/resend-otp").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/blogs/{blogId}").authenticated()
+                        .requestMatchers(HttpMethod.POST, "/api/blogs").authenticated()
+                        .requestMatchers(HttpMethod.PUT, "/api/blogs").authenticated()
+                        .requestMatchers(HttpMethod.DELETE, "/api/blogs/{blogId}").authenticated()
+                        .requestMatchers(HttpMethod.POST, "/api/blogs/{blogId}/comments").authenticated()
+                        .requestMatchers(HttpMethod.POST, "/api/blogs/{blogId}/comments/{parentCommentId}/replies").authenticated()
+                        .requestMatchers(HttpMethod.GET, "/api/users/**").authenticated()
+                        .requestMatchers(HttpMethod.PUT, "/api/users/**").authenticated()
+                        .requestMatchers(HttpMethod.PATCH, "/api/users/**").authenticated()
+                        .requestMatchers("/api/notifications/**").authenticated()
                         .anyRequest().permitAll()
                 )
                 .sessionManagement(session -> session
@@ -69,10 +64,13 @@ public class SecurityConfig {
                 )
                 .userDetailsService(userDetailsService)
                 .httpBasic(Customizer.withDefaults())
+                .exceptionHandling(exceptions ->
+                        exceptions.authenticationEntryPoint(customAuthenticationEntryPoint)
+                )
                 .oauth2Login(oauth -> oauth
                         .userInfoEndpoint(ue -> ue
-                                .userService(unifiedOAuth2UserService::loadUser)        // For OAuth2
-                                .oidcUserService(unifiedOAuth2UserService::loadUser)     // For OIDC
+                                .userService(unifiedOAuth2UserService::loadUser)
+                                .oidcUserService(unifiedOAuth2UserService::loadUser)
                         )
                         .defaultSuccessUrl("http://localhost:5173/login?success=oauth", true)
                         .failureUrl("http://localhost:5173/login?error=oauth_failed")
@@ -83,9 +81,11 @@ public class SecurityConfig {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:5173", "https://aidenblog.netlify.app", "https://blogs-backend-fj3b.onrender.com", "https://newblogbackend.onrender.com"));
-//        config.setAllowedOrigins(Arrays.asList("*"));
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedOrigins(List.of("http://localhost:5173",
+                "https://aidenblog.netlify.app",
+                "https://blogs-backend-fj3b.onrender.com",
+                "https://newblogbackend.onrender.com"));
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         config.setAllowedHeaders(Arrays.asList("*"));
         config.setAllowCredentials(true);
 
